# tree-sitter-torquescript

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test_parse  tree-sitter.json
bindings/c/: tree-sitter-torquescript.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_torquescript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTorqueScript/: torquescript.h
bindings/swift/TreeSitterTorqueScriptTests/: TreeSitterTorqueScriptTests.swift
examples/: functions.cs  package.cs  prefs.cs  server.cs  test.cs  weapon_silenced.cs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: definitions.txt  statements.txt
