[package]
name = "tree-sitter-torquescript"
description = "The language used in the Torque 3D Game Engine"
version = "0.1.0"
authors = ["Monoblaster"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "torquescript"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-torquescript"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
